--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,32 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_custom_clippers: ^2.0.0
+  splashscreen: ^1.3.5
+  animated_splash_screen: ^1.1.0
+
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.3.1
+
+flutter_native_splash:
+  android: true
+  ios: true
+
+  color: "#FFFFFF"
+  image: assets/MinibizEdited.png
+
+  android_gravity: center
+  ios_content_mode: center
+
+
+  fullscreen: true
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
