--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter_custom_clippers: ^2.0.0
   animated_splash_screen: ^1.1.0
   flutter_native_splash: ^1.3.1
+  firebase_auth: ^3.2.0
+  cloud_firestore: ^3.1.0
+  shared_preferences: ^2.0.6
+  firebase_storage: ^10.0.3
 
 dev_dependencies:
   flutter_test:
